fixed overflow-y issue

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,5 @@
 .home {
-  width: 100%;
+  /* width: 100%; */
   margin: 10px 0px;
   padding: 10px;
 }
